--- a/eam/common/generator/src/main/resources/templates/ext.js.vm
+++ b/eam/common/generator/src/main/resources/templates/ext.js.vm
@@ -50,6 +50,9 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
         afterDialog:function (param,result) {
             console.log('dialog',param,result);
         },
+        onSelectBoxChanged:function(id,selected,changes,isAdd) {
+            console.log('onSelectBoxChanged',id,selected,changes,isAdd);
+        },
         /**
          * 查询前调用
          * @param conditions 复合查询条件
@@ -146,9 +149,9 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
     //表单页的扩展
     var form={
         /**
-         * 表单初始化前调用
+         * 表单初始化前调用 , 并传入表单数据
          * */
-        beforeInit:function () {
+        beforeInit:function (action,data) {
             //获取参数，并调整下拉框查询用的URL
             //var companyId=admin.getTempData("companyId");
             //fox.setSelectBoxUrl("employeeId","/service-hrm/hrm-employee/query-paged-list?companyId="+companyId);
@@ -185,6 +188,9 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
          * */
         afterDialog:function (param,result) {
             console.log('dialog',param,result);
+        },
+        onSelectBoxChanged:function(id,selected,changes,isAdd) {
+            console.log('onSelectBoxChanged',id,selected,changes,isAdd);
         },
         /**
          * 数据提交前，如果返回 false，停止后续步骤的执行
