--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-11-15 08:36:00
+ * @since 2021-11-30 21:52:31
  */
  -->
  <!DOCTYPE html>
@@ -644,9 +644,16 @@
 
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('标签')}">标签</div></div>
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('标签1')}">标签1</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="label" id="label" name="label" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('标签') }" type="text" class="layui-input"  />
+                            <input lay-filter="label" id="label" name="label" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('标签1') }" type="text" class="layui-input"  />
+                        </div>
+                    </div>
+
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('标签2')}">标签2</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <input lay-filter="label2" id="label2" name="label2" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('标签2') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
