--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_collection/asset_stock_collection_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_collection/asset_stock_collection_list.html
@@ -136,6 +136,10 @@
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var AUTH_PREFIX="eam_asset_stock_collection";
 
+
+    var OWNER_CODE = [[${ownerCode}]] ;
+
+
     // 是否需要审批
     var APPROVAL_REQUIRED = [[${approvalRequired}]] ;
 
