7. 代码生成在 search 上支持 triggerOnSelect ，针对某些需要选择的组件，是否在选择后立即触发查询 8. 针对日期查询 查询匹配模式 matchType，日期查询指定 day 后，后端自行处理日期值， 例如 查询指定日期范围  2021-12-10 ~ 2021-12-15 那么生成的语句是  birthday >= 2021-12-10 AND birthday <  2021-12-16 5. 创建时间等默认字段无法生成到查询条件界面

--- a/eam/common/generator/src/main/resources/templates/ServiceInterface.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ServiceInterface.java.vm
@@ -128,7 +128,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @param #(poVar) 数据对象
 	 * @return 判断结果
 	 */
-	Result<#(poSimpleName)> checkExists(#(poSimpleName) #(poVar));
+	Boolean checkExists(#(poSimpleName) #(poVar));
 
 	/**
 	 * 根据实体数构建默认的条件表达式, 不支持 Join 其它表
