--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_list.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_list.html
@@ -2,7 +2,7 @@
 /**
  * 合同 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-08 17:04:16
+ * @since 2021-12-09 17:16:35
  */
  -->
  <!DOCTYPE html>
@@ -22,6 +22,15 @@
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
+        xm-select {
+            background-color: #FFF;
+            position: relative;
+            border: 1px solid #E6E6E6;
+            border-radius: 2px;
+            display: block;
+            cursor: pointer;
+            outline: none;
+        }
     </style>
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
 </head>
@@ -37,95 +46,44 @@
             <div class="search-input-rows" style="opacity: 0">
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
-                    <!-- 主键 , id ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 合同类型 , type ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 上级合同ID , parentId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 合同编号 , contractNo ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 交付物 , deliverables ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 交付地 , deliveryLocation ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 合同金额 , amount ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 摘要信息 , summary ,typeName=text_area, isHideInSearch=true -->
+                    <!-- 签订日期 , signingDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 生效日期 , effectiveDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 结束日期 , endDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 失效日期 , expirationDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 资金状态 , fundingStatus ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 资金流向 , fundingDirection ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 合同分类 , catalogCode ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('主键')}" class="search-label id-label">主键</span><span class="search-colon">:</span></div>
-                        <input id="id" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 合同类型 , type ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('合同类型')}" class="search-label type-label">合同类型</span><span class="search-colon">:</span></div>
-                        <input id="type" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 上级合同ID , parentId ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('上级合同ID')}" class="search-label parentId-label">上级合同ID</span><span class="search-colon">:</span></div>
-                        <input id="parentId" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 合同编号 , contractNo ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('合同编号')}" class="search-label contractNo-label">合同编号</span><span class="search-colon">:</span></div>
-                        <input id="contractNo" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('合同分类')}" class="search-label catalogCode-label">合同分类</span><span class="search-colon">:</span></div>
+                        <div id="catalogCode" th:data="${dict.toArray('contract_catalog')}" style="width:140px;margin-right: 4px" extraParam="{}"></div>
                     </div>
                     <!-- 合同抬头 , title ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('合同抬头')}" class="search-label title-label">合同抬头</span><span class="search-colon">:</span></div>
                         <input id="title" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
-                    <!-- 交付物 , deliverables ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('交付物')}" class="search-label deliverables-label">交付物</span><span class="search-colon">:</span></div>
-                        <input id="deliverables" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 交付地 , deliveryLocation ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('交付地')}" class="search-label deliveryLocation-label">交付地</span><span class="search-colon">:</span></div>
-                        <input id="deliveryLocation" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 合同金额 , amount ,typeName=number_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('合同金额')}" class="search-label amount-label">合同金额</span><span class="search-colon">:</span></div>
-                            <input id="amount" class="layui-input search-input" style="width: 140px" type="text" autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0" min-value="" max-value="" scale="0"/>
-                    </div>
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
                     <!-- 合同状态 , contractStatus ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('合同状态')}" class="search-label contractStatus-label">合同状态</span><span class="search-colon">:</span></div>
                         <input id="contractStatus" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
-                    <!-- 摘要信息 , summary ,typeName=text_area, isHideInSearch=false -->
+                    <!-- 归属部门 , departmentId ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('摘要信息')}" class="search-label summary-label">摘要信息</span><span class="search-colon">:</span></div>
-                        <input id="summary" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 签订日期 , signingDate ,typeName=date_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('签订日期')}" class="search-label signingDate-label">签订日期</span><span class="search-colon">:</span></div>
-                            <input type="text" id="signingDate"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('请选择')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
-                    </div>
-                    <!-- 生效日期 , effectiveDate ,typeName=date_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('生效日期')}" class="search-label effectiveDate-label">生效日期</span><span class="search-colon">:</span></div>
-                            <input type="text" id="effectiveDate"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('请选择')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
-                    </div>
-                    <!-- 结束日期 , endDate ,typeName=date_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('结束日期')}" class="search-label endDate-label">结束日期</span><span class="search-colon">:</span></div>
-                            <input type="text" id="endDate"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('请选择')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
-                    </div>
-                    <!-- 失效日期 , expirationDate ,typeName=date_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('失效日期')}" class="search-label expirationDate-label">失效日期</span><span class="search-colon">:</span></div>
-                            <input type="text" id="expirationDate"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('请选择')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
-                    </div>
-                    <!-- 归属部门ID , departmentId ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('归属部门ID')}" class="search-label departmentId-label">归属部门ID</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('归属部门')}" class="search-label departmentId-label">归属部门</span><span class="search-colon">:</span></div>
                         <input id="departmentId" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 资金状态 , fundingStatus ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('资金状态')}" class="search-label fundingStatus-label">资金状态</span><span class="search-colon">:</span></div>
-                        <input id="fundingStatus" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 资金流向 , fundingDirection ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('资金流向')}" class="search-label fundingDirection-label">资金流向</span><span class="search-colon">:</span></div>
-                        <input id="fundingDirection" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 合同分类代码 , catalogCode ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('合同分类代码')}" class="search-label catalogCode-label">合同分类代码</span><span class="search-colon">:</span></div>
-                        <input id="catalogCode" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
 
 
@@ -139,7 +97,7 @@
             </div>
         </div>
 
-        <div style="margin-top: 42px ">
+        <div style="margin-top: 84px ">
             <table class="layui-table" id="data-table" lay-filter="data-table"></table>
         </div>
 
@@ -175,6 +133,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
+    var SELECT_CATALOGCODE_DATA = [[${dict.toArray('contract_catalog')}]];
     var AUTH_PREFIX="cont_contract";
 
 
